--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -35,7 +35,7 @@
             <tbody>
             <tr>
                 <td>11</td>
-                <td>제목을 누루면 악보구매 form이z 나와야함</td>
+                <td>제목을 누루면 악보구매 form이 나와야함</td>
                 <td>asd </td>
                 <td>asd</td>
                 <td>asd</td>
