--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -36,22 +36,31 @@
         border-top-left-radius: 0;
         border-top-right-radius: 0;
     }
+    .field-error{
+        border-color: #dc3545;
+        color: #dc3545;
+    }
 
 </style>
 <div style="height: 865px">
     <body class="text-center">
     <main class="form-signin" style="margin-top: 210px">
-        <form>
-            <img class="mb-4" src="/icon/bootstrap-logo.svg" alt="" width="72" height="57">
-            <h1 class="h3 mb-3 fw-normal">로그인 페이지</h1>
+        <form method="post" action="/login" th:object="${loginFormDto}">
+            <div th:if="${#fields.hasGlobalErrors()}">
+                <h6 style="margin-bottom: 20px" class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메시지</h6>
+            </div>
 
+            <img class="mb-4" src="/icon/bootstrap-logo.svg"  width="72" height="57">
+            <h1 class="h3 mb-3 fw-normal">로그인 페이지</h1>
             <div class="form-floating">
-                <input type="text" class="form-control" id="id">
+                <input type="text" class="form-control" id="id" name="id" th:field="*{id}">
                 <label for="id">아이디</label>
+                <label style="margin-left: 70px" for="id" class="text-start field-error" th:errors="*{id}"></label>
             </div>
             <div class="form-floating">
-                <input type="password" class="form-control" id="pwd" >
-                <label for="pwd">비밀번호</label>
+                <input type="password" class="form-control" id="pw" name="pw" >
+                <label for="pw">비밀번호</label>
+                <label style="margin-left: 70px" for="id" class="text-start field-error" th:errors="*{pw}"></label>
             </div>
 
             <div class="checkbox mb-3">
