로그인 세션 로그아웃

--- a/src/main/resources/templates/items/sellListForm.html
+++ b/src/main/resources/templates/items/sellListForm.html
@@ -5,7 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 
-로그인 성공
+판매목록 구현하기
+
+
 <div th:replace="~{fragments/footer :: footer}"/>
 
 </html>
