--- a/src/main/resources/templates/login/myInfoForm.html
+++ b/src/main/resources/templates/login/myInfoForm.html
@@ -5,13 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 
-내가 등록한 악보<br>
-장바 구니 <br>
-보유 캐시 <br>
-캐시 충전 <br>
+판매목록 구현하기
 
-<div style="height: 1000px">
-</div>
+
 <div th:replace="~{fragments/footer :: footer}"/>
 
 </html>
