--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="header">
@@ -7,9 +6,8 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.88.1">
-    <title>Index</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/headers/">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <header class="p-3 bg-dark text-white">
@@ -19,16 +17,16 @@
             <li><a href="/" class="nav-link px-5 text-white">악보목록</a></li>
             <li><a href="/add" class="nav-link px-5 text-white">악보등록</a></li>
             <li><a href="/buyList" class="nav-link px-5 text-white">구매목록</a></li>
-            <li><a href="/cart" class="nav-link px-5 text-white">판매목록</a></li>
+            <li><a href="/sellList" class="nav-link px-5 text-white">판매목록</a></li>
             <li><a href="/myInfo" class="nav-link px-5 text-white">내정보</a></li>
         </form>
 
         <div class="text-end">
-            <a class="btn btn-outline-light me-2" href="/login" th:if="!${loginId}" >로그인</a>
-            <a class="btn btn-outline-info" href="/signup" th:if="!${loginId}">회원가입</a>
+            <a class="btn btn-outline-light me-2" href="/login" th:if="!${loginId}">로그인</a>
+            <a class="btn btn-outline-info" href="/signup"th:if="!${loginId}" >회원가입</a>
 
             <form method="post" th:action="@{/logout}">
-            <a class="btn btn-warning me-2 fw-bold" th:if="${loginId}" th:text="${loginId}+ ' 님' "></a>
+            <a class="btn btn-warning me-2 fw-bold" th:if="${loginId}"th:text="${loginId}">이름</a>
                 <button class="btn btn-outline-info fw-bold" th:if="${loginId}">로그아웃</button>
             </form>
 
