--- a/src/main/resources/templates/items/buyListForm.html
+++ b/src/main/resources/templates/items/buyListForm.html
@@ -1,100 +1,111 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header :: header}">
-    <title>Hello</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
-<body>
-<br>
+
+<div style="height: 1000px">
     <div class="container">
-        <form>
-            <select style="height:38px">
-                <option selected>정렬선택</option>
-                <option value="home.html">등록번호내림차순</option>
-                <option value="price">가격내림차순</option>
-                <option value="views">조회수내림차순</option>
-            </select>
-
-            <button style="margin-block-end: 5px" type="submit" class="btn btn-primary">확인</button>
+        <form class="row g-2" style="margin-top: 20px">
+            <div class="col-auto">
+                <select class="form-select">
+                    <option selected>정렬선택</option>
+                    <option>낮은가격순</option>
+                    <option>높은가격순</option>
+                    <option>악보제목순</option>
+                </select>
+            </div>
+            <div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-3">확인</button>
+            </div>
         </form>
-    </div>
-    <div class="container" style="height: 1000px;">
-        <div>
-            <table class="table table-striped">
-                <thead>
-                <tr>
-                    <th>#</th>
-                    <th>곡제목</th>
-                    <th>만든이</th>
-                    <th>악기</th>
-                    <th>난이도</th>
-                    <th>조회수</th>
-                    <th>가격</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>11</td>
-                    <td>곡제목 누루면 악보볼수있는 페이지가 나와야함</td>
-                    <td>asd</td>
-                    <td>asd</td>
-                    <td>asd</td>
-                    <td>asd</td>
-                    <td>asd</td>
-                </tr>
-                <tr>
-                    <td>12</td>
-                    <td>asd</td>
-                    <td>asd</td>
-                    <td>asd</td>
-                    <td>asd</td>
-                    <td>asd</td>
-                    <td>asd</td>
-                </tr>
-                <tr>
-                    <td>13</td>
-                    <td>asd</td>
-                    <td>asd</td>
-                    <td>asd</td>
-                    <td>asd</td>
-                    <td>asd</td>
-                    <td>asd</td>
-                </tr>
-                <tr>
-                    <td>14</td>
-                    <td>asd</td>
-                    <td>asd</td>
-                    <td>asd</td>
-                    <td>asd</td>
-                    <td>asd</td>
-                    <td>asd</td>
-                </tr>
-                </tbody>
-            </table>
 
-            <br>
-            <nav aria-label="Page navigation example">
-                <ul class="pagination justify-content-center">
-                    <li class="page-item disabled">
-                        <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item"><a class="page-link" href="#">4</a></li>
-                    <li class="page-item"><a class="page-link" href="#">5</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#">Next</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </div>
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th>#</th>
+                <th >곡제목</th>
+                <th>만든이</th>
+                <th>악기</th>
+                <th>난이도</th>
+                <th>조회수</th>
+                <th>가격</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td></td>
+                <td>악보구매목록만들기</td>
+                <td>asd </td>
+                <td>asd</td>
+                <td>asd</td>
+                <td>asd</td>
+                <td>asd</td>
+            </tr>
+            <tr>
+                <td>12</td>
+                <td>asd</td>
+                <td>asd</td>
+                <td>asd</td>
+                <td>asd</td>
+                <td>asd</td>
+                <td>asd</td>
+            </tr>
+            <tr>
+                <td>13</td>
+                <td>asd</td>
+                <td>asd</td>
+                <td>asd</td>
+                <td>asd</td>
+                <td>asd</td>
+                <td>asd</td>
+            </tr>
+            <tr>
+                <td>20</td>
+                <td>asd</td>
+                <td>asd</td>
+                <td>asd</td>
+                <td>asd</td>
+                <td>asd</td>
+                <td>asd</td>
+            </tr>
+            </tbody>
+        </table>
 
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                <li class="page-item disabled">
+                    <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">4</a></li>
+                <li class="page-item"><a class="page-link" href="#">5</a></li>
+                <li class="page-item">
+                    <a class="page-link" href="#">Next</a>
+                </li>
+            </ul>
+        </nav>
+
+        <form class="row g-2 justify-content-center" style="margin-bottom: 300px">
+            <div class="col-auto">
+                <select class="form-select">
+                    <option selected>제목검색</option>
+                    <option>글작성자</option>
+                </select>
+            </div>
+            <div class="col-3">
+                <input type="search" class="form-control" placeholder="악보를 검색하세요" aria-label="Search" >
+            </div>
+
+            <div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-3">확인</button>
+            </div>
+        </form>
+
+    </div>
 </div>
-</body>
-
 
 <div th:replace="~{fragments/footer :: footer}"/>
-
 </html>
