등록기능 구현중

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,7 +15,7 @@
 
         <form class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <li><a href="/" class="nav-link px-5 text-white">악보목록</a></li>
-            <li><a href="/add" class="nav-link px-5 text-white">악보등록</a></li>
+            <li><a href="/addItem" class="nav-link px-5 text-white">악보등록</a></li>
             <li><a href="/buyList" class="nav-link px-5 text-white">구매목록</a></li>
             <li><a href="/sellList" class="nav-link px-5 text-white">판매목록</a></li>
             <li><a href="/myInfo" class="nav-link px-5 text-white">내정보</a></li>
