등록기능 구현중

--- a/src/main/resources/templates/addSheetMusic/itemContentForm.html
+++ b/src/main/resources/templates/addSheetMusic/itemContentForm.html
@@ -1,10 +1,13 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header :: head}"/>
-<div th:replace="~{fragments/header :: header ('sinupComplete')}"/>
+<div th:replace="~{fragments/header :: header ('itemContent')}"/>
+<div style="height: 1000px">
+
+    판매리스트 출력하기
 
 
-회원가입성공
+</div>
 <div th:replace="~{fragments/footer :: footer}"/>
 
 </html>
