--- a/src/main/resources/templates/addSheetMusic/addItemForm.html
+++ b/src/main/resources/templates/addSheetMusic/addItemForm.html
@@ -1,45 +1,61 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
-<head th:replace="~{fragments/header :: header}">
-    <title>Hello</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-</head>
-
-<div style="height: 1000px; margin-top: 20px">
+<head th:replace="~{fragments/header :: head}"/>
+<div th:replace="~{fragments/header :: header ('addItem')}"/>
+<style>
+    .field-error{
+        border-color: #dc3545;
+        color: #dc3545;
+    }
+</style>
+<div style="height: 1000px; margin-top: 20px" >
     <form class="w-50 container" enctype="multipart/form-data" method="post" action="/addItem"
-          th:object="${addItemFormDto}">
+          th:object="${addItemFormDto}" >
 
-        <label style="margin-top: 10px" for="title" class="form-label">제목입력하세요</label>
+        <label style="margin-top: 10px" for="title" class="form-label">제목 입력하세요</label>
+        <label class="field-error" style="margin-left: 200px"
+               th:if="${errors?.containsKey('title')}" th:text="${errors['title']}">오류메세지</label>
         <input type="text" class="form-control" id="title" name="title" placeholder="제목">
-
         <label style="margin-top: 10px" class="form-label">악기타입 입력하세요</label>
-        <select class="form-select" id="type" name="type">
-            <option value="" selected>악기선택</option>
-            <option value="piano" id="piano">피아노</option>
-            <option value="guitar" id="guitar">기타</option>
-            <option value="drum" id="drum">드럼</option>
+        <label class="field-error" style="margin-left: 200px"
+               th:if="${errors?.containsKey('type')}" th:text="${errors['type']}">오류메세지</label>
+        <select class="form-select" id="type" name="type" th:field="*{type}">
+            <option value="">악기선택</option>
+            <option value="피아노" id="piano">피아노</option>
+            <option value="기타" id="guitar">기타</option>
+            <option value="드럼" id="drum">드럼</option>
         </select>
 
         <label style="margin-top: 10px" class="form-label">난이도 입력하세요 </label>
-        <select class="form-select" id="level" name="level">
+        <label class="field-error" style="margin-left: 200px"
+               th:if="${errors?.containsKey('level')}" th:text="${errors['level']}">오류메세지</label>
+        <select class="form-select" id="level" name="level" th:field="*{level}">
             <option value="" selected>난이도선택</option>
-            <option value="3" id="3">상</option>
-            <option value="2" id="2">중</option>
-            <option value="1" id="1">하</option>
+            <option value="어려움" id="3">어려움</option>
+            <option value="보통" id="2">보통</option>
+            <option value="쉬움" id="1">쉬움</option>
         </select>
 
         <label style="margin-top: 10px" class="form-label">가격 입력하세요 </label>
-        <input type="text" class="form-control" id="price" name="price" placeholder="가격">
+        <label class="field-error" style="margin-left: 200px"
+               th:if="${errors?.containsKey('price')}" th:text="${errors['price']}">오류메세지</label>
+        <input type="number" class="form-control" id="price" name="price" placeholder="가격"
+               th:field="*{price}">
+        <label for="price" class="text-start field-error"></label>
 
 
 
 
         <label style="margin-top: 10px" class="form-label">pdf 악보 올리기</label>
-        <input class="form-control" type="file" id="pdfFile">
+        <input class="form-control" type="file" id="pdfFile" name="pdfFile">
 
 
         <label style="margin-top: 10px" class="form-label">내용을 입력하세요</label>
-        <textarea class="form-control" id="content" name="content" rows="15"></textarea>
+        <label class="field-error" style="margin-left: 200px"
+               th:if="${errors?.containsKey('content')}" th:text="${errors['content']}">오류메세지</label>
+        <textarea class="form-control" id="content" name="content" rows="15"
+                  th:field="*{content}"></textarea>
+        <label for="content" class="text-start field-error"></label>
 
 
         <div class="text-center" style="margin-top: 30px">
