--- a/src/main/resources/templates/addSheetMusic/buyListForm.html
+++ b/src/main/resources/templates/addSheetMusic/buyListForm.html
@@ -1,111 +1,13 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/header :: header}">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-</head>
-
+<head th:replace="~{fragments/header :: head}"/>
+<div th:replace="~{fragments/header :: header ('buyList')}"/>
 <div style="height: 1000px">
-    <div class="container">
-        <form class="row g-2" style="margin-top: 20px">
-            <div class="col-auto">
-                <select class="form-select">
-                    <option selected>정렬선택</option>
-                    <option>낮은가격순</option>
-                    <option>높은가격순</option>
-                    <option>악보제목순</option>
-                </select>
-            </div>
-            <div class="col-auto">
-                <button type="submit" class="btn btn-primary mb-3">확인</button>
-            </div>
-        </form>
 
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th>#</th>
-                <th >곡제목</th>
-                <th>만든이</th>
-                <th>악기</th>
-                <th>난이도</th>
-                <th>조회수</th>
-                <th>가격</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>11</td>
-                <td>악보구매목록만들기</td>
-                <td>asd </td>
-                <td>asd</td>
-                <td>asd</td>
-                <td>asd</td>
-                <td>asd</td>
-            </tr>
-            <tr>
-                <td>12</td>
-                <td>asd</td>
-                <td>asd</td>
-                <td>asd</td>
-                <td>asd</td>
-                <td>asd</td>
-                <td>asd</td>
-            </tr>
-            <tr>
-                <td>13</td>
-                <td>asd</td>
-                <td>asd</td>
-                <td>asd</td>
-                <td>asd</td>
-                <td>asd</td>
-                <td>asd</td>
-            </tr>
-            <tr>
-                <td>20</td>
-                <td>asd</td>
-                <td>asd</td>
-                <td>asd</td>
-                <td>asd</td>
-                <td>asd</td>
-                <td>asd</td>
-            </tr>
-            </tbody>
-        </table>
+    구매목록
 
-        <nav aria-label="Page navigation example">
-            <ul class="pagination justify-content-center">
-                <li class="page-item disabled">
-                    <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item"><a class="page-link" href="#">4</a></li>
-                <li class="page-item"><a class="page-link" href="#">5</a></li>
-                <li class="page-item">
-                    <a class="page-link" href="#">Next</a>
-                </li>
-            </ul>
-        </nav>
 
-        <form class="row g-2 justify-content-center" style="margin-bottom: 300px">
-            <div class="col-auto">
-                <select class="form-select">
-                    <option selected>제목검색</option>
-                    <option>글작성자</option>
-                </select>
-            </div>
-            <div class="col-3">
-                <input type="search" class="form-control" placeholder="악보를 검색하세요" aria-label="Search" >
-            </div>
-
-            <div class="col-auto">
-                <button type="submit" class="btn btn-primary mb-3">확인</button>
-            </div>
-        </form>
-
-    </div>
 </div>
-
 <div th:replace="~{fragments/footer :: footer}"/>
+
 </html>
