--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,17 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:fragment="footer">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.88.1">
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/footers/">
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-
-</head>
-<body>
-<footer class="py-3 my-4">
+<footer class="py-3 my-4" th:fragment="footer">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
@@ -21,7 +10,4 @@
     </ul>
     <p class="text-center text-muted">&copy; 2024 Company, Inc</p>
 </footer>
-
-</body>
-
 </html>
