--- a/src/main/resources/templates/login/cartForm.html
+++ b/src/main/resources/templates/login/cartForm.html
@@ -1,9 +1,8 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/header :: header}">
-    <title>Hello</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-</head>
+<head th:replace="~{fragments/header :: head}"/>
+<div th:replace="~{fragments/header :: header ('cart')}"/>
+
 판매리스트 출력하기
 
 
