--- a/src/main/resources/templates/login/myInfoForm.html
+++ b/src/main/resources/templates/login/myInfoForm.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/header :: header}">
-    <title>Hello</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-</head>
+<head th:replace="~{fragments/header :: head}"/>
+<div th:replace="~{fragments/header :: header ('myInfo')}"/>
 
-판매목록 구현하기
+판매리스트 출력하기
 
 
+<div style="height: 1000px">
+</div>
 <div th:replace="~{fragments/footer :: footer}"/>
 
 </html>
