--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -45,23 +45,24 @@
             </table>
         </div>
 
-        <ul class="pagination justify-content-center">
-            <li class="page-item" th:classappend="${start==0} ? 'disabled'">
-                <a class="page-link" th:href="@{/ (page=${end -7}, start=${start -7}, end=${end -7})}">이전</a>
-            </li>
-
-            <li th:each=" page: ${#numbers.sequence(start, end)}"
-                th:classappend="${page == paging.number} ? 'active'"
-                class="page-item">
-
-                <a th:text="${page.intValue()+1}" class="page-link"
-                   th:href="@{/ (page=${page}, start=${start}, end=${end})}"></a>
-            </li>
-
-            <li class="page-item" th:classappend="${end>=paging.getTotalPages()-1} ? 'disabled'">
-                <a class="page-link" th:href="@{/ (page=${start+7}, start=${start+7}, end=${end+7})}">다음</a>
-            </li>
-        </ul>
+            <ul class="pagination justify-content-center">
+                <li class="page-item" th:classappend="${start == 0} ? 'disabled'">
+                    <a class="page-link" th:href="@{|?page=${start -1}|}"> << </a>
+                </li>
+                <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
+                    <a class="page-link" th:href="@{|?page=${paging.number -1}|}"> < </a>
+                </li>
+                <li class="page-item" th:classappend="${page == paging.number} ? 'active'"
+                    th:each="page : ${#numbers.sequence(start, end)}">
+                    <a class="page-link" th:text="${page+1}" th:href="@{|?page=${page}|}"></a>
+                </li>
+                <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
+                    <a class="page-link" th:href="@{|?page=${paging.number+1}|}"> > </a>
+                </li>
+                <li class="page-item" th:classappend="${paging.getTotalPages() < end} ? 'disabled'">
+                    <a class="page-link" th:href="@{|?page=${start+7}|}"> >> </a>
+                </li>
+            </ul>
 
         <form class="row g-2 justify-content-center" style="margin-bottom: 154px">
             <div class="col-auto">
