--- a/src/main/resources/templates/login/signupCompleteForm.html
+++ b/src/main/resources/templates/login/signupCompleteForm.html
@@ -4,7 +4,7 @@
 <div th:replace="~{fragments/header :: header ('sinupComplete')}"/>
 
 
-회원가입성공
+<h1>회원가입 성공 </h1>
 <div th:replace="~{fragments/footer :: footer}"/>
 
 </html>
