--- a/src/main/resources/templates/login/signupCompleteForm.html
+++ b/src/main/resources/templates/login/signupCompleteForm.html
@@ -3,8 +3,10 @@
 <head th:replace="~{fragments/header :: head}"/>
 <div th:replace="~{fragments/header :: header ('sinupComplete')}"/>
 
+<div class="container" style="margin-top: 20px; height: 1000px" >
+    <h1>회원가입 성공 </h1>
+</div>
 
-<h1>회원가입 성공 </h1>
 <div th:replace="~{fragments/footer :: footer}"/>
 
 </html>
