--- a/src/main/resources/templates/musicList/contentMusicListForm.html
+++ b/src/main/resources/templates/musicList/contentMusicListForm.html
@@ -12,7 +12,7 @@
         <li>등록일 <p th:text="*{localDateTime}"></p></li>
         <li>내용 <p style="white-space: pre-line" th:text="*{content}"></p></li>
         <li>첨부파일
-            <table>
+            <table th:if="${sellBuyList} or ${musicList.loginId.equals(loginId)}">
                 <tr th:each="file : ${fileList}">
                     <td>
                         <a th:text="${file.originalFilename}" th:href="|/download/${file.id}|"></a>
@@ -21,40 +21,49 @@
             </table>
         </li>
     </ul>
-    <button th:if="${loginId!=musicList.loginId}" onclick="buyBtnClick()"
-            type="button" class="btn btn-primary btn-lg">구매하기</button>
-    <button th:if="${loginId==musicList.loginId}" onclick="updateBtnClick()"
-            type="button" class="btn btn-primary btn-lg">수정하기</button>
-    <button th:if="${loginId!=musicList.loginId}" onclick="cartBtnClick()"
-            type="button" class="btn btn-primary btn-lg">장바구니</button>
-    <button th:if="${loginId==musicList.loginId}" onclick="deleteBtnClick()"
-            type="button" class="btn btn-primary btn-lg">삭제하기</button>
+    <div th:if="${loginId!=musicList.loginId}">
+        <button onclick="buyBtnClick()"
+                type="button" class="btn btn-primary btn-lg">구매하기</button>
+        <button  onclick="cartBtnClick()"
+                type="button" class="btn btn-primary btn-lg">장바구니</button>
+    </div>
+
+    <div th:if="${loginId==musicList.loginId}" >
+        <button onclick="updateBtnClick()"
+                type="button" class="btn btn-primary btn-lg">수정하기</button>
+        <button onclick="deleteBtnClick()"
+                type="button" class="btn btn-primary btn-lg">삭제하기</button>
+    </div>
+
+
 
     <div id='buy_div' style="display: none">
-        <form style="margin-top: 20px;" method="post">
+        <form style="margin-top: 20px;">
             <h1>구매하시겠습니까</h1>
-            <button class="btn btn-lg btn-primary">Yes</button>
+            <button type="button" class="btn btn-lg btn-primary"
+                    th:onclick="|location.href='@{/buyMusicList (musicListId=${musicList.id}) }'|">Yes</button>
         </form>
     </div>
 
     <div id='cart_div' style="display: none">
-        <form style="margin-top: 20px;" method="post">
+        <form style="margin-top: 20px">
             <h1>장바구니담으시겟습니까</h1>
-            <button class="btn btn-lg btn-primary">Yes</button>
+            <button type="button" class="btn btn-lg btn-primary">Yes</button>
         </form>
     </div>
 
     <div id='update_div' style="display: none">
-        <form style="margin-top: 20px;" method="post">
+        <form style="margin-top: 20px">
             <h1>수정하시겠습니까</h1>
-            <button class="btn btn-lg btn-primary">Yes</button>
+            <button type="button" class="btn btn-lg btn-primary">Yes</button>
         </form>
     </div>
 
     <div id='delete_div' style="display: none">
-        <form style="margin-top: 20px;" method="post">
+        <form style="margin-top: 20px">
             <h1>삭제하시겟습니까</h1>
-            <button class="btn btn-lg btn-primary">Yes</button>
+            <button type="button"  class="btn btn-lg btn-primary"
+                    th:onclick="|location.href='@{/deleteMusicList (musicListId=${musicList.id}) }'|">Yes</button>
         </form>
     </div>
 
@@ -92,6 +101,7 @@
                 delete_div.style.display = 'inline';
             }
         }
+
     </script>
 
 </div>
